--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "rules": {
         "no-unused-vars": "warn",
         "no-undef": "off",
-        "prop-types": "off"
+        "prop-types": "off",
+        "react/prop-types": "off"
     }
 }
